feat/rename (#104)
Reviewed-on: https://git.ombrage.space/opendrive/opendrive/pulls/104
Co-committed-by: Nicolas Boyer <boyer63nicolas@gmail.com>

Former-commit-id: ec426f1cbd9b372947c28a749098716aac0985d8
